{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 88,
  "lineage": "6ce7d89b-089e-ffd7-06e5-f3f089241587",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:internet-gateway/igw-0a0cde21c16cf5987",
            "id": "igw-0a0cde21c16cf5987",
            "owner_id": "992382627001",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform GATWAY",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform GATWAY",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382627001:loadbalancer/app/Terraform-ALB/0bfd1e980d026961",
            "arn_suffix": "app/Terraform-ALB/0bfd1e980d026961",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-ALB-1310103775.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382627001:loadbalancer/app/Terraform-ALB/0bfd1e980d026961",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a45ec87e99325f6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b030ff0ea8d4b42"
              },
              {
                "subnet_id": "subnet-0ff51746c4d884446"
              }
            ],
            "subnets": [
              "subnet-04b030ff0ea8d4b42",
              "subnet-0ff51746c4d884446"
            ],
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.loadbalancer",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382627001:listener/app/Terraform-ALB/0bfd1e980d026961/62f9d675707c676d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382627001:targetgroup/Load-Balancer-target-group/34dc11c087cfd84d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382627001:listener/app/Terraform-ALB/0bfd1e980d026961/62f9d675707c676d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382627001:loadbalancer/app/Terraform-ALB/0bfd1e980d026961",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.loadbalancer",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382627001:targetgroup/Load-Balancer-target-group/34dc11c087cfd84d",
            "arn_suffix": "targetgroup/Load-Balancer-target-group/34dc11c087cfd84d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382627001:targetgroup/Load-Balancer-target-group/34dc11c087cfd84d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Load-Balancer-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:route-table/rtb-084a9c3489ddcd3d5",
            "id": "rtb-084a9c3489ddcd3d5",
            "owner_id": "992382627001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform ROUTE_TABLE_PRIVATE",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform ROUTE_TABLE_PRIVATE",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:route-table/rtb-076be1053048ddd8d",
            "id": "rtb-076be1053048ddd8d",
            "owner_id": "992382627001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0cde21c16cf5987",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform ROUTE_TABLE_PUBLIC",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform ROUTE_TABLE_PUBLIC",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0053f5c1accdd8a06",
            "route_table_id": "rtb-084a9c3489ddcd3d5",
            "subnet_id": "subnet-0f116fcbc8a524b63"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02074a6ce27556768",
            "route_table_id": "rtb-084a9c3489ddcd3d5",
            "subnet_id": "subnet-0e9b51be5f30f3302"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308059566af7798b",
            "route_table_id": "rtb-076be1053048ddd8d",
            "subnet_id": "subnet-04b030ff0ea8d4b42"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239004f6550fd659",
            "route_table_id": "rtb-076be1053048ddd8d",
            "subnet_id": "subnet-0ff51746c4d884446"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:security-group/sg-0a88da96d3bc0134b",
            "description": "Allow incomming database connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a88da96d3bc0134b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ccdff9d3001f23ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": "",
            "owner_id": "992382627001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Server db",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Server db",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:security-group/sg-0a45ec87e99325f6b",
            "description": "load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a45ec87e99325f6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadBalancer_scg",
            "name_prefix": "",
            "owner_id": "992382627001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Load Balance Security Group",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Load Balance Security Group",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:security-group/sg-0ccdff9d3001f23ca",
            "description": "AWS Security group web",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0ccdff9d3001f23ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "992382627001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:subnet/subnet-04b030ff0ea8d4b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b030ff0ea8d4b42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382627001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Public_a",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Public_a",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:subnet/subnet-0ff51746c4d884446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff51746c4d884446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382627001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Public_b",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Public_b",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:subnet/subnet-0f116fcbc8a524b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f116fcbc8a524b63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382627001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Private_a",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Private_a",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:subnet/subnet-0e9b51be5f30f3302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9b51be5f30f3302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382627001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Private_b",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Private_b",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-08cfd5a435f345cfd"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382627001:vpc/vpc-08cfd5a435f345cfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d70183dfc7285932",
            "default_route_table_id": "rtb-00509f0041f25ebc7",
            "default_security_group_id": "sg-019a77c10a01eb3c3",
            "dhcp_options_id": "dopt-017a36e086c54ae7f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cfd5a435f345cfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00509f0041f25ebc7",
            "owner_id": "992382627001",
            "tags": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2024-10-20",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC",
              "Owner": "Pedro Ribeiro",
              "Project": "infra eks terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}